welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: '(' expected but 'for' found.
	if  for ( ( a<-13 to 19 ) ||  ( b<-13 to 19 )) {
            ^teenSum:6: error: illegal start of simple expression
}
^